tests/type_errors/try_catch_type_mismatch.nos
# expect: 42
# try/catch is dynamically typed - branches can return different types
main() = {
    x = try { 42 } catch { _ -> "error" }
    x
}
